# openthread

./: .cmake-format.yaml  .gitmodules  .travis.yml  Android.bp  Android.mk  CMakeLists.txt  CONTRIBUTING.md  check-backbone-link  component.mk  components.mk  configure.ac  leader.exp  router.exp
.github/workflows/: build.yml  posix.yml  simulation-1.2.yml  simulation.yml
.travis/: before_install.sh  check-backbone-link  check-code-style  posix-app-pty  script.sh  size-report
etc/cmake/: functions.cmake
etc/gn/: openthread.gni
examples/: Makefile-posix  common-switches.mk
examples/apps/: Makefile.am
examples/apps/border-agent/: Makefile.am  api.cpp  api.h  main.cpp  openthread-instance.h  platform_udp.c  platform_udp.h
examples/apps/cli/: CMakeLists.txt  cli_uart.cpp  main.c
examples/apps/ncp/: CMakeLists.txt  Makefile.am  ncp.cmake  rcp.cmake
include/openthread/: Makefile.am  cli.h  coap.h  coap_secure.h  config.h  icmp6.h  ip6.h  link.h  types.h  udp.h  udp_proxy.h
include/openthread/platform/: Makefile.am  gpio.h  logging.h  netif.h  radio.h  udp.h
script/: bootstrap  check-size  gcda-tool  make-pretty  test
src/cli/: CMakeLists.txt  Makefile.am  cli.cpp  cli.hpp  cli_coap.cpp  cli_coap_secure.cpp  cli_config.h  cli_console.cpp  cli_console.hpp  cli_dataset.cpp  cli_dataset.hpp  cli_server.hpp  cli_uart.cpp  cli_uart.hpp  cli_udp_example.cpp  line_reader.hpp
src/core/: CMakeLists.txt  Makefile.am  openthread-core-default-config.h
src/core/api/: coap_api.cpp  coap_secure_api.cpp  commissioner_api.cpp  instance_api.cpp  ip6_api.cpp  joiner_api.cpp  link_api.cpp  link_raw_api.cpp  udp_api.cpp
src/core/coap/: coap.cpp  coap.hpp  coap_base.cpp  coap_base.hpp  coap_client.cpp  coap_client.hpp  coap_message.cpp  coap_message.hpp  coap_secure.cpp  coap_secure.hpp  coap_server.cpp  coap_server.hpp  secure_coap_client.cpp  secure_coap_client.hpp  secure_coap_server.cpp  secure_coap_server.hpp
src/core/common/: debug.hpp  instance.cpp  instance.hpp  logging.cpp  logging.hpp  message.cpp  message.hpp  notifier.cpp  settings.hpp  string.hpp  tasklet.cpp  timer.cpp  tlvs.hpp
src/core/crypto/: mbedtls.cpp  mbedtls.hpp  pbkdf2_cmac.cpp
src/core/diags/: factory_diags.cpp
src/core/mac/: mac.cpp  mac.hpp  mac_filter.cpp  mac_frame.cpp  mac_frame.hpp  sub_mac.cpp  sub_mac.hpp
src/core/meshcop/: announce_begin_client.cpp  border_agent.cpp  border_agent.hpp  commissioner.cpp  commissioner.hpp  dataset_manager.cpp  dataset_manager_ftd.cpp  dtls.cpp  dtls.hpp  energy_scan_client.cpp  joiner.cpp  joiner_router.cpp  leader.cpp  meshcop_tlvs.hpp  panid_query_client.cpp
src/core/net/: dhcp6.hpp  dhcp6_client.cpp  dhcp6_client.hpp  dhcp6_server.cpp  dns_client.cpp  icmp6.cpp  icmp6.hpp  ip6.cpp  ip6.hpp  ip6_address.cpp  ip6_mpl.hpp  netif.cpp  netif.hpp  sntp_client.cpp  socket.hpp  udp6.cpp  udp6.hpp
src/core/thread/: address_resolver.cpp  data_poll_manager.cpp  dua_manager.cpp  energy_scan_server.cpp  key_manager.cpp  link_quality.cpp  mesh_forwarder.cpp  mesh_forwarder.hpp  mesh_forwarder_ftd.cpp  mesh_forwarder_mtd.cpp  mle.cpp  mle.hpp  mle_constants.hpp  mle_router.cpp  mle_router_ftd.hpp  mle_router_mtd.hpp  mle_tlvs.hpp  network_data.cpp  network_data_leader_ftd.cpp  network_diagnostic.cpp  network_diagnostic_tlvs.hpp  panid_query_server.cpp  thread_netif.cpp  thread_netif.hpp  thread_uri_paths.hpp  tmf.hpp  topology.hpp
src/core/utils/: slaac_address.cpp  slaac_address.hpp
src/lib/hdlc/: CMakeLists.txt
src/lib/platform/: CMakeLists.txt  exit_code.h
src/lib/spinel/: CMakeLists.txt  radio_spinel_impl.hpp
src/lib/url/: url.cpp
src/ncp/: CMakeLists.txt  Makefile.am  ncp_base.cpp  ncp_base.hpp  ncp_base_dispatcher.cpp  ncp_base_ftd.cpp  ncp_base_mtd.cpp  ncp_base_radio.cpp  ncp_uart.cpp  spinel.c  spinel.h  spinel_decoder.cpp  spinel_platform.h
src/posix/: CMakeLists.txt  Makefile-posix  Makefile.am  cli.cmake  client.c  console_cli.cpp  daemon.cmake  main.c  ncp.cmake
src/posix/platform/: CMakeLists.txt  Makefile.am  alarm.c  frame_queue.cpp  frame_queue.hpp  hdlc.cpp  hdlc.hpp  hdlc_interface.cpp  logging.c  logging.cpp  misc.c  module_fd.cpp  module_fd.hpp  module_forkpty.cpp  module_forkpty.hpp  module_manager.cpp  module_manager.hpp  module_tty.cpp  module_tty.hpp  netif.cpp  openthread-system.h  platform-posix.h  radio.cpp  radio.hpp  radio_bblink.cpp  radio_bblink.hpp  radio_spinel.cpp  radio_spinel.hpp  radio_url.cpp  radio_url.hpp  settings.cpp  sim.c  spi.cpp  spi.hpp  spi_interface.hpp  system.c  system.cpp  uart.c  udp.cpp  vcp.cpp  (+1 more)
tests/scripts/expect/: _common.exp  _multinode.exp  cli-big-table.exp  cli-channel.exp  cli-child.exp  cli-childip.exp  cli-coap.exp  cli-coaps.exp  cli-coex.exp  cli-commissioner.exp  cli-counters.exp  cli-dataset.exp  cli-discerner.exp  cli-extaddr.exp  cli-ipmaddr.exp  cli-log-level.exp  cli-mac.exp  cli-macfilter.exp  (+20 more)
tests/toranj/: wpan.py
tests/unit/: CMakeLists.txt  Makefile.am  test_aes.cpp  test_heap.cpp  test_hmac_sha256.cpp  test_ip6_address.cpp  test_link_quality.cpp  test_mac_frame.cpp  test_message.cpp  test_message_queue.cpp  test_new.cpp  test_priority_queue.cpp  test_pskc.cpp
tools/harness-automation/: blacklist-large.txt  blacklist-rf-large.txt  blacklist-rfshield.txt  blacklist-small.txt  burn.sh  init.sh  regression.sh  test-nxp-ot.sh  test-ot-nxp.sh
(+105 files in other folders)
